--- a/src/sass/layout/_home.scss
+++ b/src/sass/layout/_home.scss
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  position: relative;
   @media screen and (min-width: 1280px) {
     height: 100%;
     padding-left: 0;
@@ -41,7 +42,7 @@
 }
 
 .home-weather {
-  margin-top: 45px;
+  // margin-top: 45px;
   padding-top: 30px;
   padding-bottom: 30px;
   background-color: #102136;
@@ -51,10 +52,14 @@
   }
   @media screen and (min-width: 1280px) {
     width: 450px;
-    margin-top: 90px;
+    // margin-top: 90px;
     margin-left: auto;
     border-radius: 34px 0 0 34px;
   }
+  @media only screen and (width:1366px) and (height: 768px) {
+    // margin-top: 0;
+  }
+
   .icon-home-clouds {
     margin-bottom: 5px;
     width: 35px;
@@ -139,7 +144,9 @@
     padding-top: 60px;
     padding-bottom: 38px;
   }
+  
   @media screen and (min-width: 1280px) {
+   
     margin-bottom: 0;
     margin-right: auto;
     margin-top: auto;
@@ -149,6 +156,11 @@
     border-radius: 0 34px 34px 0;
     align-items: flex-start;
     background: rgba(16, 33, 54, 0.6);
+  }
+  @media only screen and (width:1366px) and (height: 768px) {
+    position: absolute;
+    left: 0;
+    bottom: 0;
   }
 
   .home-date {
