--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -6,7 +6,7 @@ body {
 
   background-size: cover;
   background-attachment: fixed;
-  padding-bottom: 30px;
+  // padding-bottom: 30px;
 }
 
 .list {
