--- a/src/sass/layout/_quote.scss
+++ b/src/sass/layout/_quote.scss
@@ -13,6 +13,12 @@
       position: absolute;
       right: -10px;
       top: 350px;
+      @media only screen and (width:1366px) and (height: 768px) {
+        top: 250px;
+      }
+      
+
+
   }
 
   text-align: right;
@@ -35,3 +41,5 @@
       line-height: calc(21.6 / 18);
   }
 }
+
+
