--- a/src/sass/layout/_quote.scss
+++ b/src/sass/layout/_quote.scss
@@ -14,7 +14,8 @@
       right: -10px;
       top: 350px;
       @media only screen and (width:1366px) and (height: 768px) {
-        top: 250px;
+        top: 215px;
+        right: -30px;
       }
       
 
