--- a/src/sass/layout/_quote.scss
+++ b/src/sass/layout/_quote.scss
@@ -4,43 +4,38 @@
   margin: 0 auto;
 
   @media screen and (min-width: 768px) {
-      width: 379px;
-      margin-right: 75px;
+    width: 379px;
+    margin-right: 75px;
   }
 
   @media screen and (min-width: 1280px) {
-      width: 340px;
-      position: absolute;
-      right: -10px;
-      top: 350px;
-      @media only screen and (width:1366px) and (height: 768px) {
-        top: 215px;
-        right: -30px;
-      }
-      
-
-
+    width: 340px;
+    position: absolute;
+    right: -30px;
+    bottom: 80px;
+    @media only screen and (width: 1366px) and (height: 768px) {
+      top: 215px;
+      right: -30px;
+    }
   }
 
   text-align: right;
 
   p {
-      font-size: 14px;
-      line-height: calc(16.8 / 14);
+    font-size: 14px;
+    line-height: calc(16.8 / 14);
 
-      @media screen and (min-width: 768px) {
-          font-size: 22px;
-          line-height: calc(26.4 / 22);
-      }
+    @media screen and (min-width: 768px) {
+      font-size: 22px;
+      line-height: calc(26.4 / 22);
+    }
 
-      font-style: italic;
-      margin-bottom: 15px;
+    font-style: italic;
+    margin-bottom: 15px;
   }
 
   span {
-      font-size: 18px;
-      line-height: calc(21.6 / 18);
+    font-size: 18px;
+    line-height: calc(21.6 / 18);
   }
 }
-
-
