--- a/src/sass/layout/_favorite-list.scss
+++ b/src/sass/layout/_favorite-list.scss
@@ -6,14 +6,12 @@
   @media screen and (min-width: 768px) {
     width: 400px;
   }
-  @media screen and (min-width: 1280px) {
-    margin-bottom: 90px;
-  }
-  @media only screen and (width:1366px) and (height: 768px) {
-    margin-bottom: 45px;
-  }
-
-
+  // @media screen and (min-width: 1280px) {
+  //   margin-bottom: 90px;
+  // }
+  // @media only screen and (width: 1366px) and (height: 768px) {
+  //   margin-bottom: 45px;
+  // }
 
   &__wrap {
     margin: 0 auto;
