--- a/src/sass/layout/_quote.scss
+++ b/src/sass/layout/_quote.scss
@@ -12,7 +12,8 @@
     width: 340px;
     position: absolute;
     right: -30px;
-    bottom: 150px;
+    bottom: 60px;
+    // bottom: 150px;
     @media only screen and (width: 1366px) and (height: 768px) {
       top: 215px;
       right: -30px;
